--- a/web/themes/custom/cloudy/templates/content/events/node--event--teaser.html.twig
+++ b/web/themes/custom/cloudy/templates/content/events/node--event--teaser.html.twig
@@ -1,6 +1,17 @@
-{% extends "node--event--search-result.html.twig" %}
-{% set remove_classes = ['small'] %}
-{% block label %}
-{% endblock %}
-{% block content %}
-{% endblock %}
+{% embed "@cloudy/components/card.html.twig" with {
+  'margin': 3,
+} %}
+  {% block badge %}
+  {% endblock %}
+  {% block meta %}
+    {% include "@cloudy/components/meta.html.twig" with {
+      'start_date': content.field_start_date.0,
+      'end_date': content.field_end_date.0,
+      'all_day': content.field_all_day['#title'],
+      'start_time': content.field_start_time.0,
+      'end_time': content.field_end_time.0,
+      'margin': 2,
+    } %}
+  {% endblock %}
+  {% block description %}{% endblock %}
+{% endembed %}
