--- a/web/themes/custom/cloudy/templates/content/news/node--news--search-result.html.twig
+++ b/web/themes/custom/cloudy/templates/content/news/node--news--search-result.html.twig
@@ -1,24 +1,14 @@
-<div class="d-flex flex-column align-items-start mb-4">
-  <h3 class="order-2">
-    <a href="{{ url }}" rel="bookmark">
-      {{ label }}</a>
-  </h3>
-  {% if node.created.value %}
-    {% set created_date = node.created.value|format_date('month_day_year') %}
-    <span class="small order-3 mb-1">
-      {% trans %}
-        Published {{ created_date }}
-      {% endtrans %}
-    </span>
-  {% endif %}
-  {% if node.field_summary.value %}
-    <div class="order-4">
-      <p>{{ node.field_summary.value }}</p>
-    </div>
-  {% endif %}
-  {% if node.type.entity.label %}
-    <a class="badge badge-pill badge-light mb-1 order-1 align-self-start">
-      <span class="sr-only">Type is</span>
-      {{ node.type.entity.label }}</a>
-  {% endif %}
-</div>
+{% embed "@cloudy/components/card.html.twig" with {
+  'margin': 3,
+  'type': node.type.entity.label,
+  'description': content.field_summary,
+} %}
+  {% block meta %}
+    {% if node.created.value %}
+      {% set published_date = node.created.value|format_date('month_day_year') %}
+      <span>
+        {% trans %}Published {{ published_date }}{% endtrans %}
+      </span>
+    {% endif %}
+  {% endblock %}
+{% endembed %}
