--- a/web/themes/custom/cloudy/templates/content/page/node--page--search-result.html.twig
+++ b/web/themes/custom/cloudy/templates/content/page/node--page--search-result.html.twig
@@ -1,17 +1,6 @@
-<div class="d-flex flex-column align-items-start mb-4">
-  <h3 class="order-2">
-    <a href="{{ url }}" rel="bookmark">
-      {{ label }}</a>
-  </h3>
-  {% if node.field_summary.value %}
-    <div class="order-3">
-      <p>{{ node.field_summary.value }}</p>
-    </div>
-  {% endif %}
-  {% if node.field_page_type.value %}
-    <span class="badge badge-pill badge-light mb-1 order-1 align-self-start">
-      <span class="sr-only">Type is</span>
-        {{ content.field_page_type }}
-    </span>
-  {% endif %}
-</div>
+{% embed "@cloudy/components/card.html.twig" with {
+  'margin': 3,
+  'type': content.field_page_type,
+  'description': content.field_summary,
+} %}
+{% endembed %}
