--- a/web/themes/custom/cloudy/templates/groups/project/group--project--search-result.html.twig
+++ b/web/themes/custom/cloudy/templates/groups/project/group--project--search-result.html.twig
@@ -1,31 +1,28 @@
-<div class="d-flex flex-column align-items-start mb-4">
-  <h3 class="order-2">
-    <a href="{{ url }}" rel="bookmark">
-      {{ label }}</a>
-  </h3>
-  {% if content.field_summary %}
-    <div class="order-3">
-      {% if content.field_start_date.0 %}
-        <div class="project-dates h5 mb-1"><i class="fas fa-calendar"></i>
-          {% if content.field_start_date.0 %}
-            {{ content.field_start_date.0 }}
-          {% endif %}
-          {% if content.field_end_date.0 %}
-            through {{ content.field_end_date.0 }}
-          {% endif %}
+{% embed "@cloudy/components/card.html.twig" with {
+  'margin': 3,
+  'type': content.field_project_type,
+  'description': content.field_summary,
+} %}
+  {% block meta %}
+    <div class="meta">
+      {%
+        set meta_classes = meta_classes|default([
+          'mb-1',
+        ])
+      %}
+      {% set start_date = content.field_start_date.0 %}
+      {% set end_date = content.field_end_date.0 %}
+      {% if start_date and end_date %}
+        <div{{ meta_attributes.addClass(meta_classes, 'event--date') }}>
+          <time>{{ start_date }}</time>
+          <span class="px-1">{{ "to"|t }}</span>
+          <time>{{ end_date }}</time>
+        </div>
+      {% elseif start_date %}
+        <div{{ meta_attributes.addClass(meta_classes, 'event--date') }}>
+          <time>{{ start_date }}</time>
         </div>
       {% endif %}
-      <p>{{ content.field_summary.0 }}</p>  
     </div>
-  {% endif %}
-  {% if content.field_project_type %}
-    <span class="badge badge-pill badge-light mb-1 order-1 align-self-start">
-      <span class="sr-only">Type is</span>
-        {{ content.field_project_type }}
-    </span>
-  {% elseif group.type.entity.label %}
-    <span class="badge badge-pill badge-light mb-1 order-1 align-self-start">
-      <span class="sr-only">Type is</span>
-      {{ group.type.entity.label }}</span>
-  {% endif %}
-</div>
+  {% endblock %}
+{% endembed %}
