POWR-983-2 Clean up font icon Sass

--- a/web/themes/custom/cloudy/scss/_mixins.scss
+++ b/web/themes/custom/cloudy/scss/_mixins.scss
@@ -1,20 +1,23 @@
 
 /* EXTENDS */
 
-//
-// FontAwesome icon
-//
-%font-awesome-icon {
+// Icon placeholder extended inside icon mixin
+%fa-icon {
   display: inline-block;
-  vertical-align: middle;
-  font-style: normal;
-  font-variant: normal;
-  text-rendering: auto;
-  -webkit-font-smoothing: antialiased;
   font-family: "Font Awesome 5 Free";
   font-size: $font-size-sm;
+  font-style: normal;
+  font-variant-caps: normal;
+  font-variant-ligatures: normal;
   font-weight: 900;
-  padding-left: .5rem;
+  text-rendering: auto;
+  -webkit-font-smoothing: antialiased;
+}
+
+// Display icons using pseudo element
+@mixin icon($icon) {
+  @extend %fa-icon;
+  content: $icon;
 }
 
 /* MIXINS */
