--- a/web/themes/custom/cloudy/scss/_overrides.scss
+++ b/web/themes/custom/cloudy/scss/_overrides.scss
@@ -277,8 +277,8 @@ div.paragraph--type--document {
 
 span.ext {
   &:after {
-    @extend %font-awesome-icon;
-    content: $ext-icon;
+    @include icon($ext-icon);
+    padding-left: ($spacer * 0.5);
   }
 }
 
