--- a/web/themes/custom/cloudy/scss/_theme-variables.scss
+++ b/web/themes/custom/cloudy/scss/_theme-variables.scss
@@ -35,3 +35,8 @@ $border-radius-tight: .125em;
 /* Blockquotes */
 // Include after fixing Sass import order and update blockquote inside _extends.scss
 // $blockquote-height-border: $border-width * 10;
+
+// Icons
+$ext-icon: "\f35d";
+$clock-icon: "\f017";
+$cal-icon: "\f133";
