POWR-893 first pass at a compact content admin view layout

--- a/web/themes/custom/cloudy/scss/components/_form.scss
+++ b/web/themes/custom/cloudy/scss/components/_form.scss
@@ -96,3 +96,35 @@ span.prev-link {
 span.next-link .fas {
   margin: 0 0 0 .5rem;
 }
+
+// admin content views, make more compact
+
+.view-admin-group-content .form-check {
+  padding-left: 0;
+}
+.view-admin-group-content .dropbutton-multiple {
+  margin-right: 2em !important;
+  padding-right: 3em !important;
+}
+.view-admin-group-content table {
+  font-size: 0.8em;
+}
+.view-admin-group-content table .form-item {
+  margin-top: 0;
+}
+.view-admin-group-content table td, .view-admin-group-content table th {
+  padding: 2px 15px 2px 0 !important;
+  vertical-align: top;
+}
+.view-admin-group-content .status-badge {
+  margin-right: 5px;
+}
+.status-badge.status-unpublished {
+  color: lightgray;
+}
+.status-badge.status-published {
+  color: Green;
+}
+.view-admin-group-content th > a:after {
+  bottom: -3px; /* 1. */
+}
