POWR-784 add displays and update seach result twig template.

--- a/web/themes/custom/cloudy/templates/groups/group--search-result.html.twig
+++ b/web/themes/custom/cloudy/templates/groups/group--search-result.html.twig
@@ -11,6 +11,10 @@
   {% if group.type.entity.label %}
     <a class="badge badge-pill badge-light mb-1 order-1 align-self-start">
       <span class="sr-only">Type is</span>
-      {{ group.type.entity.label }}</a>
+      {% if content.field_group_type %} 
+        {{ content.field_group_type.0 }} 
+      {% else %}
+        {{ group.type.entity.label }}
+      {% endif %}</a>
   {% endif %}
 </div>
