POWR-893 updated badge colors, moved lock icon

--- a/web/themes/custom/cloudy/scss/components/_form.scss
+++ b/web/themes/custom/cloudy/scss/components/_form.scss
@@ -119,10 +119,10 @@ span.next-link .fas {
 .view-admin-group-content .status-badge {
   margin-right: 5px;
 }
-.status-badge.status-unpublished {
+.status-unpublished {
   color: lightgray;
 }
-.status-badge.status-published {
+.status-published {
   color: Green;
 }
 .view-admin-group-content th > a:after {
