--- a/web/themes/custom/cloudy/scss/components/_form.scss
+++ b/web/themes/custom/cloudy/scss/components/_form.scss
@@ -97,7 +97,7 @@ span.next-link .fas {
   margin: 0 0 0 .5rem;
 }
 
-// admin content views, make more compact
+// admin content views, make more compact, powr-893
 
 .view-admin-group-content .form-check {
   padding-left: 0;
