POWR-893 put styles in the proper files, referenced font size and color variables.

--- a/web/themes/custom/cloudy/scss/components/_tables.scss
+++ b/web/themes/custom/cloudy/scss/components/_tables.scss
@@ -155,3 +155,15 @@ th.select-all {
 td.views-field-thumbnail__target-id {
   width: 110px;
 }
+
+/* admin content/media view tables */
+.view-admin-group-content table {
+  font-size: $font-size-sm;
+}
+.view-admin-group-content table td, .view-admin-group-content table th {
+  padding: 2px 15px 2px 0 !important;
+  vertical-align: top;
+}
+.view-admin-group-content th > a:after {
+  bottom: -3px;
+}
