--- a/web/themes/custom/cloudy/scss/components/_badge.scss
+++ b/web/themes/custom/cloudy/scss/components/_badge.scss
@@ -8,3 +8,14 @@
   margin: 0 0 .25em .125em;
   background-color: $navbar-menu-alert-badge-bg;
 }
+
+// admin content/media views
+.view-admin-group-content .status-badge {
+  margin-right: 5px;
+}
+.status-unpublished {
+  color: $gray;
+}
+.status-published {
+  color: $green;
+}
