--- a/web/themes/custom/cloudy/scss/components/_badge.scss
+++ b/web/themes/custom/cloudy/scss/components/_badge.scss
@@ -9,7 +9,7 @@
   background-color: $navbar-menu-alert-badge-bg;
 }
 
-// admin content/media views
+/* admin content/media view tables */
 .view-admin-group-content .status-badge {
   margin-right: 5px;
 }
