POWR-983-2 Refactor display suite card templates

--- a/web/themes/custom/cloudy/scss/components/_card.scss
+++ b/web/themes/custom/cloudy/scss/components/_card.scss
@@ -1,3 +1,65 @@
+// Card grid
+.card-grid {
+  @include media-breakpoint-up(md) {
+    display: grid;
+    grid-auto-rows: 1fr;
+    grid-template-columns: repeat(2, 1fr);
+    grid-column-gap: $spacer;
+    .card {
+      flex-direction: column;
+    }
+  }
+  @include media-breakpoint-up(lg) {
+    grid-template-columns: repeat(3, 1fr);
+  }
+}
+
+.card {
+  @include media-breakpoint-up(md) {
+    flex-direction: row-reverse;
+    .card-img {
+      align-self: center;
+      padding: $spacer $spacer $spacer 0;
+      img {
+        height: 24vh;
+        width: 30vw;
+        object-fit: cover;
+        align-self: center;
+        margin: 0;
+      }
+    }
+  }
+}
+
+.is--featured {
+  @include media-breakpoint-up(lg){
+    flex-direction: row-reverse;
+    margin-bottom: $spacer;
+    .card-img--featured {
+      align-self: center;
+      padding: $spacer $spacer $spacer 0;
+    }
+    .field--type-image, .field--type-image img {
+      height: 24vh;
+      width: 30vw;
+      object-fit: cover;
+      align-self: center;
+      margin: 0;
+    }
+  }
+}
+
+.node .card-img--featured .field--type-image {
+  margin: 0;
+}
+
+.node .media--view-mode-featured .field--type-image {
+  margin: 0 0 $spacer;
+  img {
+    margin: 0;
+  }
+}
+
 .step {
   .card {
     &:first-child {
@@ -16,51 +78,4 @@
       margin-bottom: $card-deck-margin;
     }
   }
-}
-
-// Equal height grid
-.card-group--related .view-content, .card-group--featured {
-  display: grid;
-  grid-template-columns: repeat(1, 1fr);
-  grid-auto-rows: 1fr;
-  grid-gap: $card-deck-margin;
-  @include media-breakpoint-up(md) {
-    grid-template-columns: repeat(2, 1fr);
-  }
-  @include media-breakpoint-up(lg) {
-    grid-template-columns: repeat(3, 1fr);
-  }
-}
-
-.node .media--view-mode-featured .field--type-image {
-  margin: 0 0 $spacer;
-  img {
-    margin: 0;
-  }
-}
-
-.card-grid-img *:not(source, img) {
-  display: flex;
-  height: 180px;
-  width: 100%;
-  @include media-breakpoint-up(lg) {
-    height: 100%;
-  }
-}
-
-.card-grid-img {
-  flex: 1;
-  margin-bottom: $spacer;
-  @include media-breakpoint-up(lg) {
-    margin-bottom: 0;
-  }
-  img {
-    object-fit: cover;
-  }
-}
-
-.card-grid-body{
-  display: flex;
-  flex: 2;
-  flex-direction: column;
 }
