--- a/web/themes/custom/cloudy/scss/components/_field.scss
+++ b/web/themes/custom/cloudy/scss/components/_field.scss
@@ -3,7 +3,7 @@
  * Visual styles for Bootstrap Barrio's field components.
  */
 
-.field--type-entity-reference {
+ .field--type-entity-reference {
   margin: 0 0 ($spacer * 1.2);
 }
 
@@ -164,4 +164,23 @@ span.postal-code {
 
 .field--label-above label {
   font-weight: 700;
+}
+
+// Apply event icons
+.event {
+  &--date, &--time {
+    &:before {
+      padding-right: ($spacer * 0.25);
+    }
+  }
+  &--date {
+    &:before {
+      @include icon($cal-icon);
+    }
+  }
+  &--time {
+    &:before {
+      @include icon($clock-icon);
+    }
+  }
 }
