POWR-983-2 Update card styles

--- a/web/themes/custom/cloudy/scss/components/_card.scss
+++ b/web/themes/custom/cloudy/scss/components/_card.scss
@@ -1,3 +1,29 @@
+// Card
+.card {
+  img {
+    height: auto;
+    max-height: 200px;
+    object-fit: cover;
+    object-position: center;
+  }
+  @include media-breakpoint-up(sm) {
+    img {
+      max-height: 100%;
+    }
+  }
+  @include media-breakpoint-up(lg) {
+    flex-direction: row-reverse;
+    .card-img {
+      align-self: center;
+      padding: $spacer $spacer $spacer 0;
+      flex-basis: 40%;
+      img {
+        height: 200px;
+      }
+    }
+  }
+}
+
 // Card grid
 .card-grid {
   @include media-breakpoint-up(md) {
@@ -7,45 +33,16 @@
     grid-column-gap: $spacer;
     .card {
       flex-direction: column;
+      .card-img {
+        padding: 0;
+        img {
+          position: relative;
+        }
+      }
     }
   }
   @include media-breakpoint-up(lg) {
     grid-template-columns: repeat(3, 1fr);
-  }
-}
-
-.card {
-  @include media-breakpoint-up(md) {
-    flex-direction: row-reverse;
-    .card-img {
-      align-self: center;
-      padding: $spacer $spacer $spacer 0;
-      img {
-        height: 24vh;
-        width: 30vw;
-        object-fit: cover;
-        align-self: center;
-        margin: 0;
-      }
-    }
-  }
-}
-
-.is--featured {
-  @include media-breakpoint-up(lg){
-    flex-direction: row-reverse;
-    margin-bottom: $spacer;
-    .card-img--featured {
-      align-self: center;
-      padding: $spacer $spacer $spacer 0;
-    }
-    .field--type-image, .field--type-image img {
-      height: 24vh;
-      width: 30vw;
-      object-fit: cover;
-      align-self: center;
-      margin: 0;
-    }
   }
 }
 
