POWR-1145 Apply card group WIP

--- a/web/themes/custom/cloudy/scss/components/_card.scss
+++ b/web/themes/custom/cloudy/scss/components/_card.scss
@@ -1,48 +1,25 @@
-// Card
 .card {
-  img {
-    height: auto;
-    max-height: 200px;
-    object-fit: cover;
-    object-position: center;
-  }
-  @include media-breakpoint-up(sm) {
+  margin-bottom: $spacer;
+  .card-img-top {
+    height: 200px;
     img {
-      max-height: 100%;
-    }
-  }
-  @include media-breakpoint-up(lg) {
-    flex-direction: row-reverse;
-    .card-img {
-      align-self: center;
-      padding: $spacer $spacer $spacer 0;
-      flex-basis: 40%;
-      img {
-        height: 200px;
-      }
+      object-fit: cover;
+      height: 200px;
     }
   }
 }
 
-// Card grid
-.card-grid {
-  @include media-breakpoint-up(md) {
-    display: grid;
-    grid-auto-rows: 1fr;
-    grid-template-columns: repeat(2, 1fr);
-    grid-column-gap: $spacer;
-    .card {
-      flex-direction: column;
-      .card-img {
-        padding: 0;
-        img {
-          position: relative;
-        }
-      }
+.card-deck {
+  .card {
+    @include media-breakpoint-up(sm) {
+      flex-basis: calc((100% / 2) - #{$card-deck-margin * 2});
+      max-width: calc((100% / 2) - #{$card-deck-margin * 2});
+      margin-bottom: $card-deck-margin * 2;
     }
-  }
-  @include media-breakpoint-up(lg) {
-    grid-template-columns: repeat(3, 1fr);
+    @include media-breakpoint-up(lg) {
+      flex-basis: calc((100% / 3) - #{$card-deck-margin * 2});
+      max-width: calc((100% / 3) - #{$card-deck-margin * 2});
+    }
   }
 }
 
