--- a/web/themes/custom/cloudy/templates/ds/card.html.twig
+++ b/web/themes/custom/cloudy/templates/ds/card.html.twig
@@ -22,13 +22,12 @@
 {%
   set card_classes = card_classes|default([
     'card',
-    'mb-' ~ margin,
   ])
 %}
 
 {%
   set first_classes = first_classes|default([
-    'card-img',
+    'card-img-top',
   ])
 %}
 {%
