--- a/web/themes/custom/cloudy/templates/field/field--field-featured-content.html.twig
+++ b/web/themes/custom/cloudy/templates/field/field--field-featured-content.html.twig
@@ -35,7 +35,7 @@
             <h2>{{ label|render }}</h2>
         {%- endif -%}
     {% endblock %}
-    <div class="card-grid">
+    <div class="card-deck">
     {% block content %}
     {%- for item in items -%}
       {{ item.content }}
