--- a/web/themes/custom/cloudy/templates/views/views-view--related--block.html.twig
+++ b/web/themes/custom/cloudy/templates/views/views-view--related--block.html.twig
@@ -37,7 +37,7 @@
     'view-id-' ~ id,
     'view-display-id-' ~ display_id,
     dom_id ? 'js-view-dom-id-' ~ dom_id,
-    'card-grid',
+    'card-deck',
   ]
 %}
 <div{{ attributes.addClass(classes) }}>
