POWR-1145 Remove temp styles

--- a/web/themes/custom/cloudy/scss/components/_card.scss
+++ b/web/themes/custom/cloudy/scss/components/_card.scss
@@ -1,11 +1,7 @@
 .card {
   margin-bottom: $spacer;
-  .card-img-top {
-    height: 200px;
-    img {
-      object-fit: cover;
-      height: 200px;
-    }
+  @include media-breakpoint-up(lg) {
+    flex-direction: row-reverse;
   }
 }
 
