POWR-1137 Update my content/media/groups/profile

--- a/web/themes/custom/cloudy/scss/components/_tables.scss
+++ b/web/themes/custom/cloudy/scss/components/_tables.scss
@@ -157,13 +157,34 @@ td.views-field-thumbnail__target-id {
 }
 
 /* admin content/media view tables */
-.view-admin-group-content table {
+.view-admin-group-content table,
+.view-my-content table,
+.view-my-media table,
+.view-my-groups table,
+.view-user-member-of-groups table,
+.view-user-assigned-to-review table {
   font-size: $font-size-sm;
 }
-.view-admin-group-content table td, .view-admin-group-content table th {
+.view-admin-group-content table td, 
+.view-admin-group-content table th,
+.view-my-content table td, 
+.view-my-content table th,
+.view-my-media table td, 
+.view-my-media table th,
+.view-my-groups table td, 
+.view-my-groups table th,
+.view-user-member-of-groups table td, 
+.view-user-member-of-groups table th,
+.view-user-assigned-to-review table td, 
+.view-user-assigned-to-review table th {
   padding: 2px 15px 2px 0 !important;
   vertical-align: top;
 }
-.view-admin-group-content th > a:after {
+.view-admin-group-content th > a:after,
+.view-my-content th > a:after,
+.view-my-media th > a:after,
+.view-my-groups th > a:after,
+.view-user-member-of-groups th > a:after,
+.view-user-assigned-to-review th > a:after {
   bottom: -3px;
 }
