--- a/web/themes/custom/cloudy/scss/components/_form.scss
+++ b/web/themes/custom/cloudy/scss/components/_form.scss
@@ -92,13 +92,19 @@ span.next-link .fas {
 }
 
 /* admin content/media view tables */
-.view-admin-group-content .form-check {
+.view-admin-group-content .form-check,
+.view-my-content .form-check,
+.view-my-media .form-check {
   padding-left: 0;
 }
-.view-admin-group-content .dropbutton-multiple {
+.view-admin-group-content .dropbutton-multiple,
+.view-my-content .dropbutton-multiple,
+.view-my-media .dropbutton-multiple {
   margin-right: 2em !important;
   padding-right: 3em !important;
 }
-.view-admin-group-content table .form-item {
+.view-admin-group-content table .form-item,
+.view-my-content table .form-item,
+.view-my-media table .form-item {
   margin-top: 0;
 }
