POWR-1145 Add featured large and update featured responsive image styles

--- a/web/themes/custom/cloudy/scss/components/_card.scss
+++ b/web/themes/custom/cloudy/scss/components/_card.scss
@@ -1,7 +1,17 @@
 .card {
   margin-bottom: $spacer;
+  p {
+    margin-bottom: 0;
+  }
   @include media-breakpoint-up(lg) {
     flex-direction: row-reverse;
+    .card-img-top {
+      // flex: 1 1 500px;
+      flex: 1 0 max-content;
+    }
+    .card-body {
+      // flex-shrink: 2;
+    }
   }
 }
 
