POWR-1145 Adjust image sizes and update card style to force horizontal card image width

--- a/web/themes/custom/cloudy/scss/components/_card.scss
+++ b/web/themes/custom/cloudy/scss/components/_card.scss
@@ -6,11 +6,10 @@
   @include media-breakpoint-up(lg) {
     flex-direction: row-reverse;
     .card-img-top {
-      // flex: 1 1 500px;
-      flex: 1 0 max-content;
+      flex: 1 0 480px;
     }
     .card-body {
-      // flex-shrink: 2;
+      flex-basis: 100%;
     }
   }
 }
@@ -25,6 +24,9 @@
     @include media-breakpoint-up(lg) {
       flex-basis: calc((100% / 3) - #{$card-deck-margin * 2});
       max-width: calc((100% / 3) - #{$card-deck-margin * 2});
+      .card-img-top {
+        flex-basis: inherit;
+      }
     }
   }
 }
