--- a/web/themes/custom/cloudy/scss/components/_tables.scss
+++ b/web/themes/custom/cloudy/scss/components/_tables.scss
@@ -5,19 +5,12 @@
 
 table {
   width: 100%;
-  margin: 0 0 10px;
+  margin: 0 0 3rem;
 }
 caption {
   text-align: left; /* LTR */
 }
 [dir="rtl"] caption {
-  text-align: right;
-}
-th {
-  text-align: left; /* LTR */
-  padding: 10px 12px;
-}
-[dir="rtl"] th {
   text-align: right;
 }
 thead th {
@@ -52,35 +45,24 @@ table.no-highlight tr.selected td {
   background: transparent;
 }
 
-td,
-th {
+th,
+td {
+  padding: .2rem .5rem;
+  text-align: left; /* LTR */
   vertical-align: middle;
 }
-td {
-  padding: 10px 12px !important;
-  text-align: left; /* LTR */
-}
+
+[dir="rtl"] th,
 [dir="rtl"] td {
   text-align: right;
 }
+
 th > a {
   position: relative;
   display: block;
 }
 
 /* 1. Must match negative bottom padding of the parent <th> */
-th > a:after {
-  content: '';
-  display: block;
-  position: absolute;
-  top: 0;
-  bottom: -10px; /* 1. */
-  left: 0;
-  right: 0;
-  border-bottom: 2px solid transparent;
-  -webkit-transition: all 0.1s;
-  transition: all 0.1s;
-}
 th.is-active > a {
   color: #004875;
 }
@@ -93,8 +75,8 @@ th.is-active img {
   right: auto;
   left: 0;
 }
-th.is-active > a:after {
-  border-bottom-color: #004875;
+th.is-active {
+  border-bottom: 2px solid #004875;
 }
 th > a:hover,
 th > a:focus,
@@ -157,34 +139,19 @@ td.views-field-thumbnail__target-id {
 }
 
 /* admin content/media view tables */
-.view-admin-group-content table,
-.view-my-content table,
-.view-my-media table,
-.view-my-groups table,
-.view-user-member-of-groups table,
-.view-user-assigned-to-review table {
+table.views-table {
   font-size: $font-size-sm;
 }
-.view-admin-group-content table td, 
-.view-admin-group-content table th,
-.view-my-content table td, 
-.view-my-content table th,
-.view-my-media table td, 
-.view-my-media table th,
-.view-my-groups table td, 
-.view-my-groups table th,
-.view-user-member-of-groups table td, 
-.view-user-member-of-groups table th,
-.view-user-assigned-to-review table td, 
-.view-user-assigned-to-review table th {
+table.views-table .view-user-assigned-to-review table td, 
+table.views-table .view-user-assigned-to-review table th {
   padding: 2px 15px 2px 0 !important;
   vertical-align: top;
 }
-.view-admin-group-content th > a:after,
-.view-my-content th > a:after,
-.view-my-media th > a:after,
-.view-my-groups th > a:after,
-.view-user-member-of-groups th > a:after,
-.view-user-assigned-to-review th > a:after {
-  bottom: -3px;
+
+table.views-table {
+  @extend .table-striped;
+}
+
+table.views-table .form-check-input {
+  margin:0;
 }
