POWR-1166 fix the search result template

--- a/web/themes/custom/cloudy/templates/groups/group--search-result.html.twig
+++ b/web/themes/custom/cloudy/templates/groups/group--search-result.html.twig
@@ -9,8 +9,9 @@
     </div>
   {% endif %}
   {% if group.type.entity.label %}
-    <a class="badge badge-pill badge-light mb-1 order-1 align-self-start">
+    <div class="badge badge-pill badge-light mb-1 order-1 align-self-start">
       <span class="sr-only">Type is</span>
         {{ group.type.entity.label }}
+    </div>
   {% endif %}
 </div>
