--- a/web/themes/custom/cloudy/templates/groups/group--search-result.html.twig
+++ b/web/themes/custom/cloudy/templates/groups/group--search-result.html.twig
@@ -1,4 +1,5 @@
-<div class="d-flex flex-column align-items-start mb-4">
+<div class="card mb-3">
+  <div class="card-body d-flex flex-column align-items-start">
   <h3 class="order-2">
     <a href="{{ url }}" rel="bookmark">
       {{ label }}</a>
@@ -9,9 +10,10 @@
     </div>
   {% endif %}
   {% if group.type.entity.label %}
-    <div class="badge badge-pill badge-light mb-1 order-1 align-self-start">
+    <div class="badge badge-pill badge-light order-1 align-self-start">
       <span class="sr-only">Type is</span>
         {{ group.type.entity.label }}
     </div>
   {% endif %}
+  </div>
 </div>
