POWR-1145 Fix card display in IE11

--- a/web/themes/custom/cloudy/scss/components/_card.scss
+++ b/web/themes/custom/cloudy/scss/components/_card.scss
@@ -1,9 +1,11 @@
 .card {
+  display: block; //IE11 set image height when using 'img-fluid' inside card
   margin-bottom: $spacer;
   p {
     margin-bottom: 0;
   }
   @include media-breakpoint-up(lg) {
+    display: flex;
     flex-direction: row-reverse;
     .card-img-top {
       flex: 1 0 480px;
@@ -17,6 +19,7 @@
 .card-deck {
   .card {
     @include media-breakpoint-up(sm) {
+      display: block; //IE11 set image height when using 'img-fluid' inside card
       flex-basis: calc((100% / 2) - #{$card-deck-margin * 2});
       max-width: calc((100% / 2) - #{$card-deck-margin * 2});
       margin-bottom: $card-deck-margin * 2;
