POWR-1049 Add chosen style overrides

--- a/web/themes/custom/cloudy/scss/components/_form.scss
+++ b/web/themes/custom/cloudy/scss/components/_form.scss
@@ -108,3 +108,25 @@ span.next-link .fas {
 .view-my-media table .form-item {
   margin-top: 0;
 }
+
+// Chosen form overrides
+.chosen-container-single {
+  .chosen-single {
+    padding-left: $spacer * .75;
+  }
+}
+
+.chosen-container-multi {
+  .chosen-choices{
+    padding: ($spacer * .375) ($spacer * .75);
+    li.search-choice {
+      padding: ($spacer * .375) ($spacer * 1.5) ($spacer * .375) ($spacer * .75);
+      display: flex;
+      align-items: center;
+      .search-choice-close {
+        top: $spacer * .5;
+        right: $spacer * .25;
+      }
+    }
+  }
+}
