POWR-1049 Override chosen sprites to use copied files

--- a/web/themes/custom/cloudy/scss/_bootstrap-overrides.scss
+++ b/web/themes/custom/cloudy/scss/_bootstrap-overrides.scss
@@ -47,11 +47,15 @@ $headings-line-height: 1.25;
 // Line heights
 $line-height-lg: 1.6;
 
-// Close 
+// Close
 $close-font-size: 1rem;
 $close-font-weight: 500;
 $close-color: $link-color;
 
-// Nav 
+// Nav
 $nav-pills-border-radius: 0;
 $nav-pills-link-active-bg: #000;
+
+// chosen
+$chosen-sprite-path: '/themes/custom/cloudy/images/chosen-sprite.png';
+$chosen-sprite-retina-path: '/themes/custom/cloudy/images/chosen-sprite@2x.png';
