POWR-1182 initial commit of configs and initial updates for ckeditor templates

--- a/web/themes/custom/cloudy/scss/_components.scss
+++ b/web/themes/custom/cloudy/scss/_components.scss
@@ -6,6 +6,7 @@
 @import 'components/_breadcrumb';
 @import 'components/_buttons';
 @import 'components/_card';
+@import 'components/_ckeditor-templates';
 @import 'components/_columns';
 @import 'components/content';
 @import 'components/dialog';
