POWR-1221 clean up visual layout of meeting and documents

--- a/web/themes/custom/cloudy/scss/_components.scss
+++ b/web/themes/custom/cloudy/scss/_components.scss
@@ -1,5 +1,6 @@
 @import 'components/_address';
 @import 'components/_affix';
+@import 'components/_agenda-items';
 @import 'components/_alerts';
 @import 'components/_badge';
 @import 'components/_blockquote';
