--- a/web/themes/custom/cloudy/scss/components/_field.scss
+++ b/web/themes/custom/cloudy/scss/components/_field.scss
@@ -8,7 +8,7 @@
 }
 
 .field--type-entity-reference .field__label {
-  font-weight: 400;
+  font-weight: 700;
   margin: 0;
   padding-right: ($spacer * 0.3);
   /* LTR */
@@ -151,7 +151,8 @@ span.postal-code {
   }
 }
 
-.field--label-above label {
+.field--label-above label,
+.field--label-inline label{
   font-weight: 700;
 }
 
