POWR-1221 update list views and displays; fix a group address issue

--- a/web/themes/custom/cloudy/scss/components/_agenda-items.scss
+++ b/web/themes/custom/cloudy/scss/components/_agenda-items.scss
@@ -3,3 +3,11 @@
   border: 1px solid $gray-300;
   padding: .5rem 1rem;
 }
+
+.field--name-field-council-document-status,
+.field--name-field-council-document-type,
+.field--name-field-council-meeting-status,
+.field--name-field-council-meeting-type {
+  display: inline-block;
+  padding-right: .5rem;
+}
