POWR-1221 align votes output

--- a/web/themes/custom/cloudy/scss/components/_agenda-items.scss
+++ b/web/themes/custom/cloudy/scss/components/_agenda-items.scss
@@ -11,3 +11,11 @@
   display: inline-block;
   padding-right: .5rem;
 }
+
+.paragraph--type--votes {
+  .field--name-field-elected-official,
+  .field--name-field-vote {
+    display: inline-block;
+    padding-right: .5rem;
+  }
+}
