--- a/web/themes/custom/cloudy/templates/field/field--field-email.html.twig
+++ b/web/themes/custom/cloudy/templates/field/field--field-email.html.twig
@@ -46,7 +46,7 @@
     {% block content %}
       {%- for item in items if item.content|render|striptags|trim is not empty -%}
         <p{{item.attributes.addClass(item_classes)}}>
-          <a href="tel:+1{{ item.content['#title'] }}"><i class="fas fa-phone"></i>{{ item.content['#title'] }}</a>
+          <a href="mailto:{{ item.content['#title'] }}"><i class="fas fa-envelope"></i>{{ item.content['#title'] }}</a>
         </p>
       {%- endfor -%}
     {% endblock %}
