--- a/web/themes/custom/cloudy/source/_patterns/02-layouts/two-column.twig
+++ b/web/themes/custom/cloudy/source/_patterns/02-layouts/two-column.twig
@@ -1,21 +1,53 @@
-<main class="container mx-auto px-2">
-  <div class="flex flex-wrap mb-2 -mx-2">
-    <div class="w-full h-48 lg:w-3/4 my-2 px-2">
-      {% block pageContent %}
-        {% include "@utilities/_placeholder.twig" with {'placeholder':{'text':'Content'}} %}
+{% set top_left_classes = top_left_classes|default([
+  "md:w-1/2",
+  "px-2"
+  ])
+%}
+{% set top_right_classes = top_right_classes|default([
+  "w-full",
+  "px-2"
+  ])
+%}
+
+<div class="flex flex-col mb-8">
+  <div class="w-full flex flex-col md:flex-row">
+    <div class="{{ top_left_classes|join(' ') }}">
+      {% block top_left %}
+          {% include "@utilities/_placeholder.twig" with {
+            "placeholder" : {
+              "text": "top left"
+            }
+          } only %}
       {% endblock %}
     </div>
-    <aside class="w-full h-48 lg:w-1/4 my-2 px-2">
-      {% block sidebar %}
-        {% include "@utilities/_placeholder.twig" with {'placeholder':{'text':'Sidebar'}} %}
-      {% endblock %}
-    </aside>
-  </div>
-  <div class="flex -mx-2">
-    <div class="w-full h-48 px-2">
-      {% block postContent %}
-        {% include "@utilities/_placeholder.twig" with {'placeholder':{'text':'Post Content'}} %}
+    <div class="{{ top_right_classes|join(' ') }}">
+      {% block top_right %}
+          {% include "@utilities/_placeholder.twig" with {
+            "placeholder" : {
+              "text": "top right"
+            }
+          } only %}
       {% endblock %}
     </div>
   </div>
-</main>
+  <div class="w-full">
+    {% block center %}
+        {% include "@utilities/_placeholder.twig" with {
+          "placeholder" : {
+            "text": "center"
+          }
+        } only %}
+    {% endblock %}
+  </div>
+</div>
+<div class="flex -mx-2">
+  <div class="w-full px-2">
+    {% block bottom %}
+      {% include "@utilities/_placeholder.twig" with {
+        "placeholder" : {
+          "text": "bottom"
+        }
+      } only %}
+    {% endblock %}
+  </div>
+</div>
