--- a/web/themes/custom/cloudy/scss/components/_entity-browser.scss
+++ b/web/themes/custom/cloudy/scss/components/_entity-browser.scss
@@ -4,7 +4,7 @@
  */
 
 .view.eb-media {
-  margin-bottom: 55px;
+  margin-bottom: 65px;
 }
 .view.eb-media .view-content {
     margin: 1em 0;
@@ -51,8 +51,8 @@
 }
 .entity-browser-form #edit-actions {
   position: fixed;
-  bottom: 0;
-  margin: 0;
+  bottom: -10px;
+  margin: 0 0 10px 0;
   width: 100%;
   background-color: #ffffff;
   z-index: 101;
@@ -78,7 +78,7 @@
   width: 100% !important;
 }
 form.entity-browser-form {
-  margin-bottom: 55px;
+  margin-bottom: 65px;
 }
 @media (min-width: 991.98px) {
   .eb-media .form-item label {
