POWR-1274 Clear fix headings

--- a/web/themes/custom/cloudy/scss/_typography.scss
+++ b/web/themes/custom/cloudy/scss/_typography.scss
@@ -17,6 +17,10 @@ html {
 	}
 }
 
+h2, h3, h4, h5, h6 {
+	clear: both;
+}
+
 // Create the heading font sizes
 @include create-heading-type-scale($heading-type-scale-base);
 
