POWR-1149 Reduce text overlay font size in image browser embed

--- a/web/themes/custom/cloudy/scss/components/_entity-browser.scss
+++ b/web/themes/custom/cloudy/scss/components/_entity-browser.scss
@@ -24,9 +24,9 @@
 .eb-media .image-grid-overlay {
   position: absolute;
   padding: 10px;
-  font-size: 1.0em;
+  font-size: $font-size-sm;
   z-index: -1;
-  line-height: 1.25em;
+  line-height: $font-size-sm * 1.1;
 }
 .eb-media .views-col.selected .image-grid-overlay {
   z-index: -1;
