POWR-1274 Clear and left align hr

--- a/web/themes/custom/cloudy/scss/_bootstrap-overrides.scss
+++ b/web/themes/custom/cloudy/scss/_bootstrap-overrides.scss
@@ -59,3 +59,11 @@ $nav-pills-link-active-bg: #000;
 // chosen
 $chosen-sprite-path: '/themes/custom/cloudy/images/chosen-sprite.png';
 $chosen-sprite-retina-path: '/themes/custom/cloudy/images/chosen-sprite@2x.png';
+
+// Horizontal rule
+
+$hr-border-color: $light-gray;
+$hr-margin-y: 1rem;
+$hr-margin-y: 1rem;
+$hr-border-width: 0px;
+$hr-border-color: #fff;
