--- a/web/themes/custom/cloudy/scss/_overrides.scss
+++ b/web/themes/custom/cloudy/scss/_overrides.scss
@@ -49,6 +49,10 @@ input {
 details {
   border-radius: $border-radius;
 }
+hr {
+  clear: both;
+  margin-left: 0;
+}
 
 /* COLORS
 --------------------------------------------------*/
