POWR-1274 Adding Bootstrap override for white

--- a/web/themes/custom/cloudy/scss/_bootstrap-overrides.scss
+++ b/web/themes/custom/cloudy/scss/_bootstrap-overrides.scss
@@ -10,6 +10,7 @@ $red: #dc3545;
 $yellow: #ffb81c;
 $light-gray: #f8f9fa;
 $gray: #dee2e6;
+$white: #fff;
 
 // Assigns primary, secondary, light, and dark to specific colors
 $primary: $blue-dark;
@@ -66,4 +67,4 @@ $hr-border-color: $light-gray;
 $hr-margin-y: 1rem;
 $hr-margin-y: 1rem;
 $hr-border-width: 0px;
-$hr-border-color: #fff;
+$hr-border-color: $white;
