POWR-1274 Changing hr back to gray

--- a/web/themes/custom/cloudy/scss/_bootstrap-overrides.scss
+++ b/web/themes/custom/cloudy/scss/_bootstrap-overrides.scss
@@ -67,4 +67,4 @@ $hr-border-color: $light-gray;
 $hr-margin-y: 1rem;
 $hr-margin-y: 1rem;
 $hr-border-width: 0px;
-$hr-border-color: $white;
+$hr-border-color: $gray;
