Update border and color for hr

--- a/web/themes/custom/cloudy/scss/_bootstrap-overrides.scss
+++ b/web/themes/custom/cloudy/scss/_bootstrap-overrides.scss
@@ -64,5 +64,5 @@ $chosen-sprite-retina-path: '/themes/custom/cloudy/images/chosen-sprite@2x.png';
 // Horizontal rule
 
 $hr-margin-y: 1rem;
-$hr-border-width: 0px;
-$hr-border-color: $white;
+$hr-border-width: 3px;
+$hr-border-color: $gray;
