POWR-1223 Update patterns

--- a/web/themes/custom/cloudy/source/_patterns/01-components/links/instagram-link.twig
+++ b/web/themes/custom/cloudy/source/_patterns/01-components/links/instagram-link.twig
@@ -1,5 +1,5 @@
 {% set icon %}
-  {% include "@elements/icons/facebook.twig" with {
+  {% include "@elements/icons/instagram.twig" with {
     "classes": [
       "h-6",
       "w-6"
@@ -7,7 +7,7 @@
   } only %}
 {% endset %}
 {% set username = username|default("username") %}
-{% set url = "https://www.facebook.com/" ~ username %}
+{% set url = "https://www.instagram.com/" ~ username %}
 {% include "@components/links/_icon-link.twig" with {
   "icon": icon,
   "text": username,
