--- a/web/themes/custom/cloudy/source/_patterns/01-components/links/_icon-link.twig
+++ b/web/themes/custom/cloudy/source/_patterns/01-components/links/_icon-link.twig
@@ -1,1 +1,8 @@
-<div class="flex items-center"><span class="mr-2">{{ icon }}</span><a href="{{ url }}">{{ text }}</a></div>
+{% set wrapper_classes = wrapper_classes|default([]) %}
+{% set class = 'class=' ~ wrapper_classes|join(' ') %}
+<a href="{{ url }}" {{ wrapper_class_markup ? class }}>
+  <div class="flex items-center mb-4">
+    <span class="mr-2">{{ icon }}</span>
+    <span>{{ text }}</span>
+  </div>
+</a>
