--- a/web/themes/custom/cloudy/source/_patterns/02-layouts/two-column.twig
+++ b/web/themes/custom/cloudy/source/_patterns/02-layouts/two-column.twig
@@ -1,21 +1,56 @@
-<main class="container mx-auto px-2">
-  <div class="flex flex-wrap mb-2 -mx-2">
-    <div class="w-full h-48 lg:w-3/4 my-2 px-2">
-      {% block pageContent %}
-        {% include "@utilities/_placeholder.twig" with {'placeholder':{'text':'Content'}} %}
-      {% endblock %}
-    </div>
-    <aside class="w-full h-48 lg:w-1/4 my-2 px-2">
-      {% block sidebar %}
-        {% include "@utilities/_placeholder.twig" with {'placeholder':{'text':'Sidebar'}} %}
-      {% endblock %}
-    </aside>
-  </div>
-  <div class="flex -mx-2">
-    <div class="w-full h-48 px-2">
-      {% block postContent %}
-        {% include "@utilities/_placeholder.twig" with {'placeholder':{'text':'Post Content'}} %}
-      {% endblock %}
-    </div>
-  </div>
-</main>
+{% set left_classes = left_classes|default([
+  "md:w-3/4",
+  "my-2",
+  "px-2",
+]) %}
+{% set right_classes = right_classes|default([
+  "md:w-1/4",
+  "my-2",
+  "px-2",
+]) %}
+{% set row_classes = row_classes|default([
+  "-mx-2"
+]) %}
+{% set left_content %}
+  {% block left %}
+    {% include "@utilities/_placeholder.twig" with {
+      "placeholder": {
+        "text": "left"
+      }
+    } %}
+  {% endblock %}
+{% endset %}
+{% set right_content %}
+  {% block right %}
+    {% include "@utilities/_placeholder.twig" with {
+      "placeholder": {
+        "text": "right"
+      }
+    } %}
+  {% endblock %}
+{% endset %}
+{% set row_content %}
+  {% embed "@layouts/_column.twig" with {
+    "wrapper_element": "div",
+    "wrapper_classes": left_classes
+  } %}
+    {% block content %}
+      {{ left_content }}
+    {% endblock %}
+  {% endembed %}
+  {% embed "@layouts/_column.twig" with {
+    "wrapper_element": "aside",
+    "wrapper_classes": right_classes
+  } %}
+    {% block content %}
+      {{ right_content}}
+    {% endblock %}
+  {% endembed %}
+{% endset %}
+{% embed "@layouts/_row.twig" with {
+  "wrapper_classes": row_classes
+} %}
+  {% block content %}
+    {{ row_content }}
+  {% endblock %}
+{% endembed %}
