--- a/web/themes/custom/cloudy/source/_patterns/_utilities/_placeholder.twig
+++ b/web/themes/custom/cloudy/source/_patterns/_utilities/_placeholder.twig
@@ -1,3 +1,3 @@
-<section class="h-48 flex justify-center items-center bg-gray-400 text-grey-darker">
+<div class="w-full h-48 flex justify-center items-center bg-gray-400 text-gray-800 border-2 border-dashed">
   {{ placeholder.text }}
-</section>
+</div>
