--- a/web/themes/custom/cloudy/templates/field/field--field-email.html.twig
+++ b/web/themes/custom/cloudy/templates/field/field--field-email.html.twig
@@ -4,8 +4,8 @@
   {% spaceless %}
     {% block content %}
       {%- for item in items if item.content|render|striptags|trim is not empty -%}
-        {% include "@components/links/phone-link.twig" with {
-          "phone_number": item.content['#title']
+        {% include "@components/links/email-link.twig" with {
+          "email": item.content["#title"]
         } only %}
       {%- endfor -%}
     {% endblock %}
