--- a/web/themes/custom/cloudy/templates/field/field--field-twitter.html.twig
+++ b/web/themes/custom/cloudy/templates/field/field--field-twitter.html.twig
@@ -4,8 +4,12 @@
   {% spaceless %}
     {% block content %}
       {%- for item in items if item.content|render|striptags|trim is not empty -%}
-        {% include "@components/links/phone-link.twig" with {
-          "phone_number": item.content['#title']
+        {% include "@components/links/twitter-link.twig" with {
+          "username": item.content["#context"].value,
+          "wrapper_class_markup": true,
+          "wrapper_classes": [
+            "flex"
+          ]
         } only %}
       {%- endfor -%}
     {% endblock %}
