POWR-1291 Search banner style changes

--- a/web/themes/custom/cloudy/scss/components/_alerts.scss
+++ b/web/themes/custom/cloudy/scss/components/_alerts.scss
@@ -18,7 +18,7 @@
 .alert-info {
   color: $black;
   background-color: $primary-alt-lightest;
-  border-left: 15px solid $primary-alt;
+  border-left: 15px solid $blue;
 }
 .alert-danger {
   color: $black;
