--- a/web/themes/custom/cloudy/scss/components/_search.scss
+++ b/web/themes/custom/cloudy/scss/components/_search.scss
@@ -9,29 +9,40 @@
     margin: 0;
     display: flex;
     flex: 1 1 auto;
+    ::placeholder { /* Chrome, Firefox, Opera, Safari 10.1+ */
+      color: $black;
+      opacity: 1; /* Firefox */
+    }
+    :-ms-input-placeholder { /* Internet Explorer 10-11 */
+      color: $black;
+    }
+    ::-ms-input-placeholder { /* Microsoft Edge */
+      color: $black;
+    }
   }
   .form-search,
   .form-autocomplete {
-    border-top: $border-width solid #000 !important;
-    border-bottom: $border-width solid #000 !important;
-    border-left: $border-width solid #000 !important;
-    border-right: 0 solid #000 !important;
-    border-radius: $border-radius-tight 0 0 $border-radius-tight !important;
+    border-top: 0 !important;
+    border-bottom: 0 !important;
+    border-left: 0 !important;
+    border-right: 0 !important;
+    border-radius: 0 !important;
     margin: 0;
   }
   .form-actions {
     @extend .input-group-append;
   }
+
+// Icon unicode found in cloudy.theme
   .form-submit {
     @extend .btn;
     @extend .btn-light;
-    border: $border-width solid #000 !important;
-    border-radius: 0 $border-radius-tight $border-radius-tight 0;
-    margin: 0;
-    font-family: "Font Awesome\ 5 Free";
+    font-size: 1.25rem;
+    font-family: "font Awesome\ 5 Free";
     font-style: normal;
-    content: "\f002"; /* FontAwesome Unicode */
     font-weight: 900;
+    border: 0 !important;
+    border-radius: 0;
   }
 }
 
@@ -39,14 +50,28 @@
   .search-api-page-block-form {
     .form-search,
     .form-autocomplete {
-      margin: 0 0 0 1rem;
-      min-width: 230px;
+      margin: 0 0 0 .75rem;
+      min-width: 14rem;
+      background-color: $gray;
+      font-size: 1rem;
     }
     .form-search,
     .form-action,
     .form-autocomplete {
       @extend .form-control;
-      padding: .125rem .75rem;
+      // padding: .125rem .75rem;
+    }
+    .form-item {
+      ::placeholder { /* Chrome, Firefox, Opera, Safari 10.1+ */
+        color: $black;
+        opacity: 1; /* Firefox */
+      }
+      :-ms-input-placeholder { /* Internet Explorer 10-11 */
+        color: $black;
+      }
+      ::-ms-input-placeholder { /* Microsoft Edge */
+        color: $black;
+      }
     }
   }
 }
@@ -55,6 +80,11 @@
   .search-api-page-block-form {
     form {
       margin: $spacer 0 0 0;
+      border-bottom: 10px solid $yellow;
+      border-top: 1px solid $gray;
+      border-left: 1px solid $gray;
+      border-right: 1px solid $gray;
+      border-radius: $border-radius-tight;
     }
     .form-search,
     .form-action,
@@ -64,30 +94,47 @@
     }
     .form-submit {
       padding: 0 $input-btn-padding-x-lg * 1;
-      font-size: 2rem;
+      border-radius: 0;
+      background: $white;
     }
   }
 }
 
 .path-frontpage .search-region-container {
-  background-color: #F8F9FA;
-	@include media-breakpoint-up(sm) {
-      padding: 0;
+  background: $primary;
+	@include media-breakpoint-up(xs) {
+      padding: 2.5rem 0;
     }
 	@include media-breakpoint-up(lg)  {
-      padding: 4rem 0;
+      padding: 2.5rem 0;
     }
+}
+
+h1.homepage-title {
+  margin: 1rem 0;
+  color: $white;
 }
 
 .popular {
-  background-color: $gray-300;
   height: 100%;
-  padding: 1rem;
+  padding: 1.5rem 0 0 0;
+  color: $white;
 }
 
 .popular h2 {
-  @extend .lead;
-  margin-bottom: .25rem;
+  margin-bottom: 1rem;
+}
+
+// Popular search terms flush left and white
+.top-search {
+  padding-left: 0;
+  a {
+    color: $white;
+  }
+}
+
+.view-top-searches .item-list ul li:last-child {
+  padding-right: 0;
 }
 
 .js input.form-autocomplete {
@@ -96,4 +143,16 @@
 
 .js input.form-autocomplete.ui-autocomplete-loading {
   background-position: right 10px center;
+}
+
+// To keep the mobile menu search form flush left
+@media (max-width: 1199px) {
+  .header {
+    .search-api-page-block-form {
+      .form-search,
+      .form-autocomplete {
+        margin: 0;
+      }
+    }
+  }
 }
