--- a/web/themes/custom/cloudy/templates/field/field--field-mime-type.html.twig
+++ b/web/themes/custom/cloudy/templates/field/field--field-mime-type.html.twig
@@ -2,7 +2,10 @@
   'application/pdf': 'fa-file-pdf',
   'application/msword': 'fa-file-word',
   'application/vnd.openxmlformats-officedocument.wordprocessingml.document': 'fa-file-word',
-  'text/plain': 'fa-file-alt',
+  'application/vnd.ms-excel': 'fa-file-excel',
+  'application/vnd.openxmlformats-officedocument.spreadsheetml.sheet': 'fa-file-excel',
+  'application/vnd.ms-powerpoint': 'fa-file-powerpoint',
+  'application/vnd.openxmlformats-officedocument.presentationml.presentation': 'fa-file-powerpoint',
 } %}
 {% embed 'field.html.twig' with {
     'margin' : '0',
@@ -14,8 +17,8 @@
   {% spaceless %}
     {% block content %}
       {%- for item in items if item.content|render|striptags|trim is not empty -%}
-        {% set icon_class = icon_map[item.content['#context']['value']] %}
-        <i{{ item.attributes.addClass(item_classes).addClass(icon_class) }} />
+        {% set icon_class = icon_map[item.content['#context']['value']] ? 'fa-file-alt' %}
+        <i{{item.attributes.addClass(item_classes).addClass(icon_class)}}></i>
       {%- endfor -%}
     {% endblock %}
   {% endspaceless %}
