--- a/web/themes/custom/cloudy/templates/field/field--field-mime-type.html.twig
+++ b/web/themes/custom/cloudy/templates/field/field--field-mime-type.html.twig
@@ -17,7 +17,7 @@
   {% spaceless %}
     {% block content %}
       {%- for item in items if item.content|render|striptags|trim is not empty -%}
-        {% set icon_class = icon_map[item.content['#context']['value']] ? 'fa-file-alt' %}
+        {% set icon_class = icon_map[item.content['#context']['value']] ?? 'fa-file-alt' %}
         <i{{item.attributes.addClass(item_classes).addClass(icon_class)}}></i>
       {%- endfor -%}
     {% endblock %}
