POWR-1060 Remove field group in favor of file link Template handles icon and file size

--- a/web/themes/custom/cloudy/templates/field/file-link.html.twig
+++ b/web/themes/custom/cloudy/templates/field/file-link.html.twig
@@ -11,4 +11,32 @@
  * @see template_preprocess_file_link()
  */
 #}
-<span>{{ link }}</span>
+{{ devel_breakpoint() }}
+{% set url = file_url(file.uri.value) %}
+{% set text = file.filename.value %}
+{% set icon %}
+  {% include '@elements/icons/_file-icon.twig' with {
+    'mime_type': file.filemime.value
+  } only %}
+{% endset %}
+
+<div class="flex items-baseline">
+  {% include '@components/links/_icon-link.twig' with {
+    'icon': icon,
+    'text': text,
+    'url': url,
+    inner_classes: [
+      'flex',
+      'items-center',
+    ],
+    icon_classes: [
+      'flex',
+      'items-center',
+    ],
+    "wrapper_class_markup": true,
+    "wrapper_classes": [
+      "flex"
+    ]
+  } only %}
+  <span class="ml-2">{{ file_size_string(file.filesize.value) }}</span>
+</div>
