POWR-1060 Change document field file display name

--- a/web/themes/custom/cloudy/templates/field/file-link.html.twig
+++ b/web/themes/custom/cloudy/templates/field/file-link.html.twig
@@ -12,9 +12,9 @@
  */
 #}
 {% set url = file_url(file.uri.value) %}
-{% set text = file.filename.value %}
+{% set text = file_display_name|default(file.filename.value) %}
 {% set icon %}
-  {% include '@elements/icons/file-icon.twig' with {
+{% include '@elements/icons/file-icon.twig' with {
     'mime_type': file.filemime.value
   } only %}
 {% endset %}
