POWR-1348 Trim display date check

--- a/web/themes/custom/cloudy/templates/field/field-group-html-element--group-date.html.twig
+++ b/web/themes/custom/cloudy/templates/field/field-group-html-element--group-date.html.twig
@@ -5,13 +5,13 @@
   {% set start_date = element["field_start_date"]|render %}
   {% set end_date = element["field_end_date"]|render %}
   {% block group %}
-    {% if field_display_date.value or field_start_date.value %}
+    {% if field_display_date.value|trim or field_start_date.value %}
       {{ parent() }}
     {% endif %}
   {% endblock %}
   {% block content %}
     <span class="flex items-center">
-      {% if field_display_date.value %}
+      {% if field_display_date.value|trim %}
         {{ display_date }}
       {% elseif field_start_date.value and field_end_date.value %}
         {{ start_date }}
