POWR-1375 nothing but template changes

--- a/web/themes/custom/cloudy/templates/layout/page.html.twig
+++ b/web/themes/custom/cloudy/templates/layout/page.html.twig
@@ -61,11 +61,8 @@
     </div>
   </nav>
 </header>
-{% set tabs = page.tabs|render %}
 {% if tabs %}
-  <div class="bg-light" role="navigation" id="tabs">
     {{ tabs }}
-  </div>
 {% endif %}
 {% set messages = page.messages|render %}
 {% if messages %}
@@ -78,16 +75,19 @@
   </section>
 {% endif %}
 {%
-  set main_classes = [
-    'main-content',
-    'row-offcanvas',
-    'row-offcanvas-left',
+  set container_classes = [
     not is_front ? 'container',
   ]
 %}
-<main {{ attributes.addClass(main_classes) }} id="content" role="main">
+<div {{ attributes.addClass(container_classes) }} id="content" role="main">
   {{ page.content }}
-</main>
+  {% if page.tools %}
+    {{ page.tools }}
+  {% endif %}
+  {% if page.menu %}
+    {{ page.menu }}
+  {% endif %}
+</div>
 <footer class="site-footer text-dark">
   <div class="container">
     <div class="row">
