POWR-1375 put search facets into a tools region

--- a/web/themes/custom/cloudy/templates/layout/page.html.twig
+++ b/web/themes/custom/cloudy/templates/layout/page.html.twig
@@ -80,13 +80,15 @@
   ]
 %}
 <div {{ attributes.addClass(container_classes) }} id="content" role="main">
-  {{ page.content }}
-  {% if page.tools %}
-    {{ page.tools }}
-  {% endif %}
-  {% if page.menu %}
-    {{ page.menu }}
-  {% endif %}
+  <div class="row">
+    {{ page.content }}
+    {% if page.tools %}
+      {{ page.tools }}
+    {% endif %}
+    {% if page.menu %}
+      {{ page.menu }}
+    {% endif %}
+  </div>
 </div>
 <footer class="site-footer text-dark">
   <div class="container">
