--- a/web/themes/custom/cloudy/templates/layout/region--tools.html.twig
+++ b/web/themes/custom/cloudy/templates/layout/region--tools.html.twig
@@ -16,7 +16,7 @@
 #}
 
 {% if content %}
-  <div{{ attributes.addClass('tools')}}>
+  <div{{ attributes.addClass('tools','col-lg-3', 'col-sm-12', 'order-3')}}>
     {{ content }}
   </div>
 {% endif %}
